manifests/stable/pf-status-relay-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: metrics-server-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: pf-status-relay-operator
    control-plane: controller-manager
  name: pf-status-relay-operator-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
