manifests/stable/pf-status-relay-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: pf-status-relay-operator
  name: pf-status-relay-operator-webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
