manifests/stable/pf-status-relay-operator-deny-all_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-status-relay-operator-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
